applications/southbound/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: southbound
  name: southbound
