applications/southbound/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: southbound-server
  namespace: southbound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: southbound-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: southbound-server
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/southbound-service:a1bbc7a0b523a74cd7e75a2e9977f873c2786b5e
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8099
          timeoutSeconds: 5
        name: southbound
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8099
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
